unpackaged/main/default/objects/Deleted_Task_Time_Split__c/Deleted_Task_Time_Split__c.object-meta.xml
<CustomObject>
    <label>Deleted Task Time Split</label>
    <nameField>
        <displayFormat>DTTS{000000}</displayFormat>
        <label>Deleted Task Time Split Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deleted Task Time Splits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>