unpackaged/main/default/objects/Deleted_Task_Time_Split__c/fields/Revoke_Reason__c.field-meta.xml
<CustomField>
    <fullName>Revoke_Reason__c</fullName>
    <label>Revoke Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>