unpackaged/main/default/objects/Deleted_Task_Time_Split__c/fields/Revoke_State__c.field-meta.xml
<CustomField>
    <fullName>Revoke_State__c</fullName>
    <label>Revoke State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Granted</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>