unpackaged/main/default/objects/Deleted_Task_Time_Split__c/fields/Revoked_By__c.field-meta.xml
<CustomField>
    <fullName>Revoked_By__c</fullName>
    <label>Revoked By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>