unpackaged/main/default/objects/Deleted_Task_Time_Split__c/fields/SyncDate__c.field-meta.xml
<CustomField>
    <fullName>SyncDate__c</fullName>
    <label>SyncDate</label>
    <type>DateTime</type>
</CustomField>