unpackaged/main/default/objects/Deleted_Task_Time_Split__c/fields/Task_Time_Split_Id__c.field-meta.xml
<CustomField>
    <fullName>Task_Time_Split_Id__c</fullName>
    <externalId>true</externalId>
    <label>Task Time Split Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>