unpackaged/main/default/objects/Deleted_Task_Time_Split__c/fields/Timecard__c.field-meta.xml
<CustomField>
    <fullName>Timecard__c</fullName>
    <label>Timecard</label>
    <referenceTo>pse__Timecard_Header__c</referenceTo>
    <relationshipLabel>Deleted Task Time Splits</relationshipLabel>
    <relationshipName>Deleted_Task_Time_Splits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>